--- a/app/templates/lately.html
+++ b/app/templates/lately.html
@@ -5,9 +5,9 @@
                     思考集
                 </div>
                 <ul>
-                    <li><a href="">Item</a></li>
-                    <li><a href="">Item</a></li>
-                    <li><a href="">Item</a></li>
+                    {% for item in range(3) %}
+                    <li><a href="">{{ posts[item].title }}</a></li>
+                    {% endfor %}
                 </ul>
             </div>
             <div class="item-group">
