--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,23 +3,34 @@
 {% block applicationMain %}
 <div class="page-login">
     <div class="application-main">
-    <div class="loginBox">
-          <h2 class="login-title">登录</h2>
-          <form action="/login" class="login-form" method="post">
-            <div class="form-group">
-              <span>用户名：</span>
-              <input type="text" placeholder="Username">
-            </div>
+        <div class="loginBox">
+            <!--          <h2 class="login-title">登录错误,请重新输入</h2>-->
+            {% if state == 0 or state == 1 %}
+                <h2 class="login-title">登录</h2>
+            {% else %}
+                <h2 class="login-title">登录错误</h2>
+            {% endif %}
+            <form action="/login" class="login-form" method="post">
+                <div class="form-group">
+                    <span>用户名：</span>
+                    <input type="text" name="username" placeholder="Username">
+                </div>
+                <div class="form-group">
+                    <span>密码：</span>
+                    <input type="password" name="password" placeholder="Password">
+                </div>
+
+                {% if state == 2 %}
+                    <div class="form-group">
+                        <div class="wrong">密码或用户名错误</div>
+                    </div>
+                {% endif %}
 
             <div class="form-group">
-              <span>密码：</span>
-              <input type="password" placeholder="Password">
+                <button type="submit">登录</button>
             </div>
-            <div class="form-group">
-              <button type="submit">登录</button>
-            </div>
-          </form>
-      </div>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock %}
