--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -120,6 +120,7 @@
 
     .page-home .application-main .lately .item-group ul li a {
         padding-left: 14px;
+        font-size:14px;
     }
 
     .page-home .application-main .mainBox {
@@ -255,12 +256,12 @@
         line-hight:1.7;
         outline:none;
     }
-    .page-newPost .application-main .button-box{
+    .page-newPost .application-main .send-box{
         display:flex;
         justify-content: flex-end;
         padding-bottom:2em;
     }
-    .page-newPost .application-main .button-box button{
+    .page-newPost .application-main .send-box button{
 
         background:#0079ae;
         outline:none;
@@ -269,5 +270,77 @@
         border-radius:4px;
         padding:10px 15px;
         font-weight: bold;
+    }
+    .page-newPost .application-main .send-box button{
+        background:#0079ae;
+        outline:none;
+        border:1px solid #0079ae;
+        color:white;
+        border-radius:4px;
+        padding:10px 15px;
+        font-weight: bold;
+    }
+    .page-post .application-main{
+        display:flex;
+        flex-direction: row;
+        align-items: baseline;
+        justify-content: space-evenly;
+    }
+    .page-post .application-main .post{
+        display:flex;
+        flex-direction: column;
+        align-items:center;
+        width:40%;
+        padding-top:1em;
+
+    }
+
+    .page-post .application-main .post .title{
+        font-size:30px;
+        font-weight:bold;
+        color:#494949;
+        letter-spacing: 1.6px;
+        width:100%;
+    }
+
+    .page-post .application-main .post .time{
+        color:#867a7a9c;
+        letter-spacing: 1px;
+        margin:1em 0;
+        width:100%;
+        font:10px;
+
+    }
+
+    .page-post .application-main .post .content{
+        padding-top:1em;
+        line-height:24px;
+        letter-spacing: 1px;
+        min-height:500px;
+    }
+
+    .page-post .application-main .post .footer{
+        display: flex;
+        margin:3em 0;
+        padding:0.5em 4em;
+        background:#664a4aed;
+        color:white;
+        font-weight:bold;
+    }
+
+    .page-post .application-main .right-box{
+        width:20%;
+        font-size:14px;
+    }
+    .page-post .application-main .right-box a{
+        display:flex;
+        flex-direction:row;
+        align-items:center;
+        padding:5px 0;
+    }
+    .page-post .application-main .right-box img{
+        padding-right:4px;
+        width:14px;
+        height:14px;
     }
 }
