--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -32,7 +32,7 @@
         <ul>
             <li><a href="/login">
                 <img src="../static/img/登录%20(1).svg" alt="">
-                登录
+                    {{ name }}
             </a></li>
         </ul>
     </div>
