--- a/app/templates/newPost.html
+++ b/app/templates/newPost.html
@@ -14,9 +14,10 @@
                     </textarea>
                 </div>
 
-                <div class="form-group button-box">
-                  <button type="submit">PUBLISH</button>
+                <div class="form-group send-box">
+                    <button type="submit">PUBLISH</button>
                 </div>
+                
             </form>
         </div>
     </div>
