[version][2.2] : 基本完成了前后端，同时优化了代码。

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -343,4 +343,17 @@
         width:14px;
         height:14px;
     }
+
+    .page-admin{
+        display:flex;
+        flex-direction:row;
+        justify-content: space-around
+    }
+    .page-admin .posts li{
+        display:flex;
+        flex-direction:row;
+    }
+    .page-admin .posts li .post{
+        padding-right:1em;
+    }
 }
