--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -3,6 +3,7 @@
 {% block applicationMain %}
 <div class="page-admin">
     <div class="posts">
+        <h1>Archive</h1>
         <ul>
             <li>
                 <div class="post">
