--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -18,7 +18,7 @@
                 <img src="../static/img/diary.svg" alt="">
                 CS札记
             </a></li>
-            <li><a href="">
+            <li><a href="/archive">
                 <img src="../static/img/cc-archive.svg" alt="">
                 归档集
             </a></li>
