--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href=" {{url_for('static',filename='css/main.css')}}">
 </head>
 <body>
+    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <div id="app">
         <div class="header">
             {% include 'header.html' %}
@@ -19,5 +20,7 @@
         </div>
 
     </div>
+    
 </body>
+
 </html>
