[version][3.2]逐步增强和补全网站的各个功能。

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -9,34 +9,17 @@
     </div>
     <div class="nav-group menu-list">
         <ul>
-            <li><a href="">
-                <img src="../static/img/笔记.svg" alt="">
-                思考集
-            </a>
-            </li>
-            <li><a href="">
-                <img src="../static/img/diary.svg" alt="">
-                CS札记
+            <li><a href="/">
+                <img src="../static/img/主页 (1).svg" alt="">
+                主页
             </a></li>
             <li><a href="/archive">
                 <img src="../static/img/cc-archive.svg" alt="">
-                归档集
+                归档
             </a></li>
             <li><a href="">
                 <img src="../static/img/./关于.svg" alt="">
                 关于我
-            </a></li>
-        </ul>
-    </div>
-    <div class="nav-group menu-controller">
-        <ul>
-            <li><a href="/login">
-                <img src="../static/img/登录%20(1).svg" alt="">
-                    {% if username is not none %}
-                        {{ username }}
-                    {% else %}
-                        登录
-                    {% endif %}
             </a></li>
         </ul>
     </div>
