--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -1,29 +1,54 @@
 {% extends 'base.html' %}
 
+{% block header %}
+{% endblock %}
+
 {% block applicationMain %}
 <div class="page-admin">
-    <div class="posts">
-        <h1>Archive</h1>
-        <ul>
-            <li>
-                <div class="post">
-                    <a href="">Hello</a>
-                </div>
-                <div class="option">
-                    <a href="">查看</a>
-                    <a href="/new-post?pid=1000">修改</a>
-                    <a href="">删除</a>
-                </div>
-
-            </li>
-        </ul>
-    </div>
-    <div class="menu">
-        <ul>
-            <li><a href="">写一篇新的文章</a></li>
-            <li><a href="">用户管理</a></li>
-        </ul>
+    <div class="application-main">
+        {% include 'admin-nav.html' %}
+        <div class="content-posts">
+            <div class="title">
+                <h1>文章管理</h1>
+                <p>你可以通过下面的表格对数据库中文章进行简单的管理。</p>
+            </div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>文章标题</th>
+                        <th>发布时间</th>
+                        <th>标签</th>
+                        <th>操作</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for post in posts%}
+                    <tr>
+                        <td>{{ post.title }}</td>
+                        <td>{{ post.time }} </td>
+                        {% if post.tag %}
+                            <td>{{ post.tag }}</td>
+                        {% else %}
+                        <td>默认</td>
+                        {% endif %}
+                        
+                        <td>
+                            <a href="/post/{{ post.pid }}">查看 |</a>
+                            <a href="/modifyPost/{{ post.pid }}">修改 |</a>
+                            <a name={{ post.pid }}>删除</a>
+                        </td>
+                    </tr>
+                    {% endfor%}
+                    
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
+<script>
+$(document).ready(function(){
+    $("input[name='keleyicom']")
+});
 
+</script>
 {% endblock %}
