--- a/app/templates/lately.html
+++ b/app/templates/lately.html
@@ -1,23 +1,17 @@
 <div class="latelyBox">
-            <div class="title">Lately</div>
-            <div class="item-group">
-                <div class="subtitle">
-                    思考集
-                </div>
-                <ul>
-                    {% for item in posts %}
-                    <li><a href="">{{ item.title }}</a></li>
-                    {% endfor %}
-                </ul>
-            </div>
-            <div class="item-group">
-                <div class="subtitle">
-                    CS札记
-                </div>
-                <ul>
-                    <li><a href="">Item</a></li>
-                    <li><a href="">Item</a></li>
-                    <li><a href="">Item</a></li>
-                </ul>
-            </div>
+    <div class="title">Lately</div>
+    <div class="item-group">
+        {% for tag in tags %}
+        <div class="subtitle">
+            {{ tag.name }}
         </div>
+        <ul>
+            {% for post in posts %}
+                {% if post.tag == tag.name %}
+                    <li><a href="">{{ post.title }}</a></li>
+                {% endif %}
+            {% endfor %}
+        </ul>
+        {% endfor %}
+    </div>
+</div>
