--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -69,7 +69,7 @@
                     <div class="title">Categories</div>
                     <ul class="categories">
                         {% for tag in tags %}
-                            <li><a href="#">{{ tag.name }}</a></li>
+                            <li><a href="/archive/tags/{{ tag.name }}">{{ tag.name }}</a></li>
                         {% endfor %}
 
                     </ul>
