--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -11,16 +11,9 @@
             <div class="title">
                 <h1>文章管理</h1>
                 <p>你可以通过下面的表格对数据库中文章进行简单的管理。</p>
+                <p>当然，你同样可以：<a href="/new-post">新建一篇文章</a></p>
             </div>
             <table>
-                <thead>
-                    <tr>
-                        <th>文章标题</th>
-                        <th>发布时间</th>
-                        <th>标签</th>
-                        <th>操作</th>
-                    </tr>
-                </thead>
                 <tbody>
                     {% for post in posts%}
                     <tr>
@@ -31,15 +24,17 @@
                         {% else %}
                         <td>默认</td>
                         {% endif %}
-                        
+
                         <td>
-                            <a href="/post/{{ post.pid }}">查看 |</a>
-                            <a href="/modifyPost/{{ post.pid }}">修改 |</a>
-                            <a name={{ post.pid }}>删除</a>
+                            <a href="/post/{{ post.pid }}">查看</a>
+                            <span>|</span>
+                            <a href="/modifyPost/{{ post.pid }}">修改</a>
+                            <span>|</span>
+                            <a name=/deletePost/{{ post.pid }}>删除</a>
                         </td>
                     </tr>
                     {% endfor%}
-                    
+
                 </tbody>
             </table>
         </div>
